配置自动读入；计算boot启动耗时

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 request.base_url=main
-spring.datasource.url = jdbc:mysql://localhost:3306/testdb?useSSL=false
-spring.datasource.username = root
-spring.datasource.password = 1
+spring.datasource.url=jdbc:mysql://localhost:3306/testdb?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=1
+
+config.ak=040dfb48535ea6859b9f5f78e1e2206d
 
 logging.level.com.cpp.web=DEBUG
 logging.level.root=WARN
-
-
 #thymeleaf start
 spring.thymeleaf.mode=HTML5
 spring.thymeleaf.encoding=UTF-8
