--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,13 @@
 		</dependency>
 
 
+		<dependency>
+			<groupId>org.mybatis.spring.boot</groupId>
+			<artifactId>mybatis-spring-boot-starter</artifactId>
+			<version>1.1.1</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
