--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,12 @@
 			<version>1.1.1</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>dubbo</artifactId>
+			<version>2.5.6</version>
+		</dependency>
+
 
 	</dependencies>
 
